// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/date-picker/basic.vue correctly 1`] = `
<div class="nova-date-picker">
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner"><input autocomplete="off" type="text" readonly="readonly" placeholder="请选择日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
  </div>
  <!---->
  <div data-mock="client-only">
    <div data-mock="mounting-portal" mountto="#portal-target" append="">
      <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
        <div class="nova-date-picker-months">
          <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
            <div class="nova-date-picker-header">
              <div title="上个月" class="nova-date-picker-prev">
                上个月
              </div>
              <div class="nova-date-picker-title">
                2020年 3月
              </div>
              <div title="下个月" class="nova-date-picker-next">
                下个月
              </div>
            </div>
            <div class="nova-date-picker-body">
              <div class="nova-date-picker-weeks">
                <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                <div class="nova-date-picker-week nova-date-picker-sat">六</div>
              </div>
              <div class="nova-date-picker-dates"></div>
            </div>
          </div>
        </div>
        <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/disabled.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner is-disabled"><input autocomplete="off" type="text" readonly="readonly" disabled="disabled" placeholder="请选择日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <!---->
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <!---->
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start is-disabled"><input autocomplete="off" type="text" readonly="readonly" disabled="disabled" placeholder="开始日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end is-disabled"><input autocomplete="off" type="text" readonly="readonly" disabled="disabled" placeholder="结束日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next is-hidden">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
            <div data-month-offset="1" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev is-hidden">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 4月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <!---->
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input autocomplete="off" type="text" readonly="readonly" placeholder="开始日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end is-disabled"><input autocomplete="off" type="text" readonly="readonly" disabled="disabled" placeholder="结束日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next is-hidden">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
            <div data-month-offset="1" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev is-hidden">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 4月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/disabled-date.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner"><input autocomplete="off" type="text" readonly="readonly" placeholder="请选择日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <!---->
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <!---->
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input autocomplete="off" type="text" readonly="readonly" placeholder="开始日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end"><input autocomplete="off" type="text" readonly="readonly" placeholder="结束日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next is-hidden">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
            <div data-month-offset="1" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev is-hidden">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 4月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/format.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner"><input autocomplete="off" type="text" readonly="readonly" placeholder="Select date" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <!---->
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="Previous month" class="nova-date-picker-prev">
                  Previous month
                </div>
                <div class="nova-date-picker-title">
                  March 2020
                </div>
                <div title="Next month" class="nova-date-picker-next">
                  Next month
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">Sun</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">Mon</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">Tue</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">Wed</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">Thu</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">Fri</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">Sat</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <!---->
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input autocomplete="off" type="text" readonly="readonly" placeholder="开始日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end"><input autocomplete="off" type="text" readonly="readonly" placeholder="结束日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    </div>
    <div data-mock="client-only">
      <div data-mock="mounting-portal" mountto="#portal-target" append="">
        <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
          <div class="nova-date-picker-months">
            <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 3月
                </div>
                <div title="下个月" class="nova-date-picker-next is-hidden">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
            <div data-month-offset="1" data-range-index="0" class="nova-date-picker-month">
              <div class="nova-date-picker-header">
                <div title="上个月" class="nova-date-picker-prev is-hidden">
                  上个月
                </div>
                <div class="nova-date-picker-title">
                  2020年 4月
                </div>
                <div title="下个月" class="nova-date-picker-next">
                  下个月
                </div>
              </div>
              <div class="nova-date-picker-body">
                <div class="nova-date-picker-weeks">
                  <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                  <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                  <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                  <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                  <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                  <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                  <div class="nova-date-picker-week nova-date-picker-sat">六</div>
                </div>
                <div class="nova-date-picker-dates"></div>
              </div>
            </div>
          </div>
          <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/range.vue correctly 1`] = `
<div class="nova-date-picker nova-date-picker-range">
  <!---->
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner nova-date-picker-range-start"><input autocomplete="off" type="text" readonly="readonly" placeholder="开始日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
    <div class="nova-date-picker-inner nova-date-picker-range-end"><input autocomplete="off" type="text" readonly="readonly" placeholder="结束日期" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
  </div>
  <div data-mock="client-only">
    <div data-mock="mounting-portal" mountto="#portal-target" append="">
      <div class="nova-dropdown nova-date-picker-dropdown" style="left: 0px; top: 0px; display: none;">
        <div class="nova-date-picker-months">
          <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
            <div class="nova-date-picker-header">
              <div title="上个月" class="nova-date-picker-prev">
                上个月
              </div>
              <div class="nova-date-picker-title">
                2020年 3月
              </div>
              <div title="下个月" class="nova-date-picker-next is-hidden">
                下个月
              </div>
            </div>
            <div class="nova-date-picker-body">
              <div class="nova-date-picker-weeks">
                <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                <div class="nova-date-picker-week nova-date-picker-sat">六</div>
              </div>
              <div class="nova-date-picker-dates"></div>
            </div>
          </div>
          <div data-month-offset="1" data-range-index="0" class="nova-date-picker-month">
            <div class="nova-date-picker-header">
              <div title="上个月" class="nova-date-picker-prev is-hidden">
                上个月
              </div>
              <div class="nova-date-picker-title">
                2020年 4月
              </div>
              <div title="下个月" class="nova-date-picker-next">
                下个月
              </div>
            </div>
            <div class="nova-date-picker-body">
              <div class="nova-date-picker-weeks">
                <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                <div class="nova-date-picker-week nova-date-picker-sat">六</div>
              </div>
              <div class="nova-date-picker-dates"></div>
            </div>
          </div>
        </div>
        <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

        </div>
      </div>
    </div>
  </div>
</div>
`;
